change menu delete extra styles

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
   <div class="hero">
     <div class="container container--hero">
       <h1 class="hero-title">
-        Der große TUI Nord- und Ostsee Insel-Index
+        Über den Wolken:
         <br>
-        Welche Inseln haben besonders viel zu bieten?
-      
+        <span>Ein Blick hinter die Kulissen der TUI fly Crew</span>
       </h1>
     </div>
   </div>
@@ -53,25 +52,19 @@
     <nav class="navigation__mobile-menu">
       <ul class="list">
         <li class="navigation__item">
-          <a href="#googeln" class="navigation__link link">Google-Suche im Vergleich</a>
+          <a href="#airport-favoriten" class="navigation__link link">Airport- Favoriten in Deutschland Europa</a>
         </li>
         <li class="navigation__item">
-          <a href="#meistgesuchte-inseln-nordsee-ostsee" class="navigation__link link">TUI Nord- und Ostsee Insel-Index</a>
+          <a href="#lieblingszieleder" class="navigation__link link">Lieblingszieleder TUI fly Crew</a>
         </li>
         <li class="navigation__item">
-          <a href="#tui-nord-und-ostsee-insel-index" class="navigation__link link">Klima-Ranking</a>
+          <a href="#versteckte-reisejuwele" class="navigation__link link">Versteckte Reisejuwele: Tipps der Flugbegleiter</a>
         </li>
         <li class="navigation__item">
-          <a href="#klima-nordsee-ostsee-inseln" class="navigation__link link">FKK-Paradiese</a>
+          <a href="#fly-crew-verrät-must-haves" class="navigation__link link">TUI fly Crew verrät Must-haves im Flieger</a>
         </li>
         <li class="navigation__item">
-          <a href="#fkk-straende-nordsee-ostsee" class="navigation__link link">Camping-Hotspots</a>
-        </li>
-        <li class="navigation__item">
-          <a href="#campingplaetze-ostsee-nordsee" class="navigation__link link">Aperol-Ranking</a>
-        </li>
-        <li class="navigation__item">
-          <a href="#aperol-spritz-preise-nordsee-ostsee" class="navigation__link link">Autofreie Inseln</a>
+          <a href="#die-skurrilsten-geschichten" class="navigation__link link">Die skurrilsten Geschichten an Bord</a>
         </li>
       </ul>
     </nav>
@@ -86,25 +79,19 @@
         </a>
         <ul class="nav-list list">
           <li class="nav-list--item">
-            <a href="#googeln" class="nav-list--link link" tabindex="0">Google-Suche <br> im Vergleich ></a>
+            <a href="#airport-favoriten" class="nav-list--link link" >Airport- Favoriten in <br> Deutschland Europa ></a>
           </li>
           <li class="nav-list--item">
-            <a href="#meistgesuchte-inseln-nordsee-ostsee" class="nav-list--link link">TUI Nord- und <br> Ostsee Insel-Index ></a>
+            <a href="#lieblingszieleder" class="nav-list--link link">Lieblingszieleder <br> TUI fly Crew ></a>
           </li>
           <li class="nav-list--item">
-            <a href="#tui-nord-und-ostsee-insel-index" class="nav-list--link link">Klima-<br>Ranking ></a>
+            <a href="#versteckte-reisejuwele" class="nav-list--link link">Versteckte Reisejuwele: <br>Tipps der Flugbegleiter ></a>
           </li>
           <li class="nav-list--item">
-            <a href="#klima-nordsee-ostsee-inseln" class="nav-list--link link">FKK-<br>Paradiese ></a>
+            <a href="#fly-crew-verrät-must-haves" class="nav-list--link link">TUI fly Crew verrät <br> Must-haves im Flieger ></a>
           </li>
           <li class="nav-list--item">
-            <a href="#fkk-straende-nordsee-ostsee" class="nav-list--link link">Camping-<br>Hotspots ></a>
-          </li>
-          <li class="nav-list--item">
-            <a href="#campingplaetze-ostsee-nordsee" class="nav-list--link link">Aperol-<br>Ranking ></a>
-          </li>
-          <li class="nav-list--item">
-            <a href="#aperol-spritz-preise-nordsee-ostsee" class="nav-list--link link">Autofreie<br> Inseln ></a>
+            <a href="#die-skurrilsten-geschichten" class="nav-list--link link">Die skurrilsten Geschichten an Bord ></a>
           </li>
         </ul>
       </div>
@@ -119,20 +106,6 @@
       <p class="section-text">
         Insgesamt 77 Inseln tummeln sich vor der Ost- und Nordseeküste der Bundesrepublik: Bei dieser Vielfalt stellt sich die Frage: Ostsee oder Nordsee – wo finden Reisende die perfekte Destination für ihre Bedürfnisse? Im großen  <strong>TUI Nord- und Ostsee Insel-Index</strong> haben wir über 50 Inseln in und außerhalb Deutschlands nach zehn Kriterien verglichen und die Top-30-Urlaubsinseln in Nord- und Ostsee ermittelt.
       </p>
-    </div>
-    <div class="container">
-      <div class="double-img">
-        <picture>
-          <source type="image/avif" srcset="img/tui-nordsee-inseln.avif 1x,img/tui-nordsee-inseln@2x.avif 2x">
-          <source type="image/webp" srcset="img/tui-nordsee-inseln.webp 1x,img/tui-nordsee-inseln@2x.webp 2x">
-          <img src="img/tui-nordsee-inseln.jpg" alt="tui-nordsee-inseln" width="532" height="350" loading="lazy" decoding="async">
-        </picture>
-        <picture>
-          <source type="image/avif" srcset="img/tui-ostsee-inseln.avif 1x,img/tui-ostsee-inseln@2x.avif 2x">
-          <source type="image/webp" srcset="img/tui-ostsee-inseln.webp 1x,img/tui-ostsee-inseln@2x.webp 2x">
-          <img src="img/tui-ostsee-inseln.jpg" alt="tui-ostsee-inseln" width="532" height="350" loading="lazy" decoding="async">
-        </picture>
-      </div>
     </div>
     <div class="container container_small">
       <h2 class="section-title pt-0 mb-20" id="googeln">
@@ -161,12 +134,147 @@
       <p class="section-text">
         Im TUI Nord- und Ostsee Insel-Index haben wir über 50 beliebte Reiseziele anhand von zehn verschiedenen Kriterien bewertet, die Urlauber an Insel-Urlauben besonders schätzen: Von klimatischen Bedingungen über die Strandqualität bis hin zum Angebot an (sportlichen) Aktivitäten.
       </p>
-    </div>
-    <div class="section-blue">
-      <div class="container container_small">
-        <p class="section-text mb-0">
-          <strong>Das Ergebnis:</strong> Die Top 30 der besten Nord- und Ostseeinseln. Mit einem Klick auf ein Kriterium Deiner Wahl kannst Du die Liste einfach nach Deinen Präferenzen sortieren.
-        </p>
+      <div class="container">
+        <div class="quote-banner rounded mb-50">
+          <div class="quote-holder mb-50">
+            <svg class="icon-quote quote-start">
+              <use xlink:href="img/sprite.svg#tui-icon-zitat-anfang"></use>
+            </svg>
+            <blockquote class="quote">
+              „Überraschenderweise ist die Quote deutlich höher als bei den älteren Zielgruppen. Auch der Rat von Expertinnen und Experten wird von
+              Jüngeren am meisten geschätzt. Insgesamt waren es sogar fast doppelt so viele wie bei den Über-55-Jährigen. Ebenfalls sehen wir,
+              dass zunehmend Neukunden aus jüngeren Generationen über unsere Reisebüros buchen. Die Jüngeren lassen sich gern von Experten beraten,
+              weil es ihnen Arbeit abnimmt und Zeit spart, die sie in Familie und Freunde, also in Work-Life-Balance, investieren können.“
+            </blockquote>
+            <svg class="icon-quote quote-end">
+              <use xlink:href="img/sprite.svg#tui-icon-zitat-ende"></use>
+            </svg>
+          </div>
+          <div class="quote-info">
+            <p class="author mb-0">Benjamin Jacobi</p>
+            <p class="author-info mb-0">Geschäftsführer Vertrieb und Marketing TUI Deutschland</p>
+          </div>
+        </div>
+        <div class="fig-wrap">
+          <div class="fig-caption rounded">
+            <h3 class="section-subtitle">
+              Digital und analog gebuchte Urlaubsreisen 2023
+            </h3>
+            <div class="caption-wrap">
+              <div class="card-transform">
+                <div class="card-side card-front white-mode">
+                  <div class="wrap-content">
+                    <svg class="icon-arrow">
+                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
+                    </svg>
+                    <svg class="card-icon icon">
+                      <use xlink:href="img/sprite.svg#tui-icon-ausschließlich_analog-ticket"></use>
+                    </svg>
+                    <span class="card-number">77</span>
+                    <p class="card-text mb-0">Ausschließlich analog</p>
+                  </div>
+                </div>
+                <div class="card-side card-back small-mode">
+                  <div class="wrap-content small-mode">
+                    <svg class="icon-arrow">
+                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
+                    </svg>
+                    <svg class="card-icon-back icon small-mode">
+                      <use xlink:href="img/sprite.svg#tui-icon-ausschließlich_analog-ticket"></use>
+                    </svg>
+                    <p class="card-text-back small-mode">Ausschließlich analog</p>
+                    <div class="back-column small-mode">
+                      <div class="column-item small-mode">
+                        <span class="column-item--number small-mode">40.339.000</span>
+                        <span class="column-item--text">Gebuchte Reisen</span>
+                      </div>
+                      <div class="column-item small-mode">
+                        <span class="column-item--number small-mode">77</span>
+                        <span class="column-item--text">Pro Minute</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card-transform">
+                <div class="card-side card-front white-mode">
+                  <div class="wrap-content">
+                    <svg class="icon-arrow">
+                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
+                    </svg>
+                    <svg class="card-icon icon">
+                      <use xlink:href="img/sprite.svg#tui-icon-sowohl_digital_als_auch_analog-ticket_smartphone"></use>
+                    </svg>
+                    <span class="card-number">21</span>
+                    <p class="card-text mb-0">Sowohl digital als <br> auch analog</p>
+                  </div>
+                </div>
+                <div class="card-side card-back small-mode">
+                  <div class="wrap-content small-mode">
+                    <svg class="icon-arrow">
+                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
+                    </svg>
+                    <svg class="card-icon-back icon small-mode">
+                      <use xlink:href="img/sprite.svg#tui-icon-sowohl_digital_als_auch_analog-ticket_smartphone"></use>
+                    </svg>
+                    <p class="card-text-back small-mode">Sowohl digital als <br> auch analog</p>
+                    <div class="back-column small-mode sc-07">
+                      <div class="column-item small-mode">
+                        <span class="column-item--number small-mode">11.128.000</span>
+                        <span class="column-item--text">Gebuchte Reisen</span>
+                      </div>
+                      <div class="column-item small-mode">
+                        <span class="column-item--number small-mode">21</span>
+                        <span class="column-item--text">Pro Minute</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card-transform" id="reisen">
+                <div class="card-side card-front white-mode">
+                  <div class="wrap-content">
+                    <svg class="icon-arrow">
+                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
+                    </svg>
+                    <svg class="card-icon icon">
+                      <use xlink:href="img/sprite.svg#tui-icon-digital_gebuchte_reisen-handy"></use>
+                    </svg>
+                    <span class="card-number">167</span>
+                    <p class="card-text mb-0">Ausschließlich digital</p>
+                  </div>
+                </div>
+                <div class="card-side card-back small-mode">
+                  <div class="wrap-content small-mode">
+                    <svg class="icon-arrow">
+                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
+                    </svg>
+                    <svg class="card-icon-back icon small-mode">
+                      <use xlink:href="img/sprite.svg#tui-icon-digital_gebuchte_reisen-handy"></use>
+                    </svg>
+                    <p class="card-text-back small-mode">Ausschließlich digital</p>
+                    <div class="back-column small-mode">
+                      <div class="column-item small-mode">
+                        <span class="column-item--number small-mode">87.633.000</span>
+                        <span class="column-item--text">Gebuchte Reisen</span>
+                      </div>
+                      <div class="column-item small-mode">
+                        <span class="column-item--number small-mode">167</span>
+                        <span class="column-item--text">Pro Minute</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            
+            </div>
+          </div>
+          <picture>
+            <source type="image/avif" srcset="./img/tui-reisebuero.avif 1x,./img/tui-reisebuero@2x.avif 2x">
+            <source type="image/webp" srcset="./img/tui-reisebuero.webp 1x,./img/tui-reisebuero@2x.webp 2x">
+            <img src="./img/tui-reisebuero.jpg" alt="tui-reisebuero" width="774" height="349" loading="lazy" decoding="async" class="rounded">
+          </picture>
+        </div>
       </div>
     </div>
   </section>
