small fix nav and slider

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a href="#fly-crew-verrät-must-haves" class="nav-list--link link">TUI fly Crew verrät <br> Must-haves im Flieger ></a>
           </li>
           <li class="nav-list--item">
-            <a href="#die-skurrilsten-geschichten" class="nav-list--link link">Die skurrilsten Geschichten an Bord ></a>
+            <a href="#die-skurrilsten-geschichten" class="nav-list--link link">Die skurrilsten <br> Geschichten an Bord ></a>
           </li>
         </ul>
       </div>
@@ -154,126 +154,6 @@
             <p class="author mb-0">Benjamin Jacobi</p>
             <p class="author-info mb-0">Geschäftsführer Vertrieb und Marketing TUI Deutschland</p>
           </div>
-        </div>
-        <div class="fig-wrap">
-          <div class="fig-caption rounded">
-            <h3 class="section-subtitle">
-              Digital und analog gebuchte Urlaubsreisen 2023
-            </h3>
-            <div class="caption-wrap">
-              <div class="card-transform">
-                <div class="card-side card-front white-mode">
-                  <div class="wrap-content">
-                    <svg class="icon-arrow">
-                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
-                    </svg>
-                    <svg class="card-icon icon">
-                      <use xlink:href="img/sprite.svg#tui-icon-ausschließlich_analog-ticket"></use>
-                    </svg>
-                    <span class="card-number">77</span>
-                    <p class="card-text mb-0">Ausschließlich analog</p>
-                  </div>
-                </div>
-                <div class="card-side card-back small-mode">
-                  <div class="wrap-content small-mode">
-                    <svg class="icon-arrow">
-                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
-                    </svg>
-                    <svg class="card-icon-back icon small-mode">
-                      <use xlink:href="img/sprite.svg#tui-icon-ausschließlich_analog-ticket"></use>
-                    </svg>
-                    <p class="card-text-back small-mode">Ausschließlich analog</p>
-                    <div class="back-column small-mode">
-                      <div class="column-item small-mode">
-                        <span class="column-item--number small-mode">40.339.000</span>
-                        <span class="column-item--text">Gebuchte Reisen</span>
-                      </div>
-                      <div class="column-item small-mode">
-                        <span class="column-item--number small-mode">77</span>
-                        <span class="column-item--text">Pro Minute</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card-transform">
-                <div class="card-side card-front white-mode">
-                  <div class="wrap-content">
-                    <svg class="icon-arrow">
-                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
-                    </svg>
-                    <svg class="card-icon icon">
-                      <use xlink:href="img/sprite.svg#tui-icon-sowohl_digital_als_auch_analog-ticket_smartphone"></use>
-                    </svg>
-                    <span class="card-number">21</span>
-                    <p class="card-text mb-0">Sowohl digital als <br> auch analog</p>
-                  </div>
-                </div>
-                <div class="card-side card-back small-mode">
-                  <div class="wrap-content small-mode">
-                    <svg class="icon-arrow">
-                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
-                    </svg>
-                    <svg class="card-icon-back icon small-mode">
-                      <use xlink:href="img/sprite.svg#tui-icon-sowohl_digital_als_auch_analog-ticket_smartphone"></use>
-                    </svg>
-                    <p class="card-text-back small-mode">Sowohl digital als <br> auch analog</p>
-                    <div class="back-column small-mode sc-07">
-                      <div class="column-item small-mode">
-                        <span class="column-item--number small-mode">11.128.000</span>
-                        <span class="column-item--text">Gebuchte Reisen</span>
-                      </div>
-                      <div class="column-item small-mode">
-                        <span class="column-item--number small-mode">21</span>
-                        <span class="column-item--text">Pro Minute</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card-transform" id="reisen">
-                <div class="card-side card-front white-mode">
-                  <div class="wrap-content">
-                    <svg class="icon-arrow">
-                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
-                    </svg>
-                    <svg class="card-icon icon">
-                      <use xlink:href="img/sprite.svg#tui-icon-digital_gebuchte_reisen-handy"></use>
-                    </svg>
-                    <span class="card-number">167</span>
-                    <p class="card-text mb-0">Ausschließlich digital</p>
-                  </div>
-                </div>
-                <div class="card-side card-back small-mode">
-                  <div class="wrap-content small-mode">
-                    <svg class="icon-arrow">
-                      <use xlink:href="img/sprite.svg#tui-icon-umdreh-pfeil"></use>
-                    </svg>
-                    <svg class="card-icon-back icon small-mode">
-                      <use xlink:href="img/sprite.svg#tui-icon-digital_gebuchte_reisen-handy"></use>
-                    </svg>
-                    <p class="card-text-back small-mode">Ausschließlich digital</p>
-                    <div class="back-column small-mode">
-                      <div class="column-item small-mode">
-                        <span class="column-item--number small-mode">87.633.000</span>
-                        <span class="column-item--text">Gebuchte Reisen</span>
-                      </div>
-                      <div class="column-item small-mode">
-                        <span class="column-item--number small-mode">167</span>
-                        <span class="column-item--text">Pro Minute</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            
-            </div>
-          </div>
-          <picture>
-            <source type="image/avif" srcset="./img/tui-reisebuero.avif 1x,./img/tui-reisebuero@2x.avif 2x">
-            <source type="image/webp" srcset="./img/tui-reisebuero.webp 1x,./img/tui-reisebuero@2x.webp 2x">
-            <img src="./img/tui-reisebuero.jpg" alt="tui-reisebuero" width="774" height="349" loading="lazy" decoding="async" class="rounded">
-          </picture>
         </div>
       </div>
     </div>
@@ -423,7 +303,7 @@
               <div class="item-slider-content">
                 <h6 class="content-title">Langeoog</h6>
                 <p class="content-text">
-                  Auf Langeoog beginnt die Entschleunigung bereits bei der Ankunft, denn Autos bleiben auf dem Festland. Die drittgrößte der Nordseeinseln hat neben wilden Dünenlandschaften und 14 Kilometern Sandstrand noch weitaus mehr zu bieten. Ein besonderes Highlight ist der Schiffswrack-Pfad, ein geschichtsträchtiger Spaziergang zu den Zeugen der Seefahrtsgeschichte, die rund um die Insel verstreut liegen. Für einen unvergesslichen Ausblick empfiehlt sich der Wasserturm Langeoog, welcher oft für einen Leuchtturm gehalten wird. Hier kannst Du bis zur Spitze steigen und das Panorama genießen.
+                  Auf Langeoog beginnt die Entschleunigung bereits bei der Ankunft, denn Autos bleiben auf dem Festland. Die drittgrößte der Nordseeinseln hag zeier kannst Du bis zur Spitze steigen und das Panorama genießen.
                 </p>
               </div>
             </div>
@@ -439,66 +319,6 @@
                 <h6 class="content-title">Juist</h6>
                 <p class="content-text">
                   Die längste der ostfriesischen Inseln wird auch liebevoll „Töwerland” – Zauberland – genannt und ist ein wahres Refugium der Stille. Hier gibt es keine Straßen, nur Sand- und Fahrradwege, die durch die unberührte Dünenlandschaft führen. Ein Highlight der Insel ist das Juister Watt, welches zum UNESCO-Welterbe zählt und eine einzigartige Naturlandschaft bietet. Juist ist eine Pferdeinsel, was bedeutet, dass sogar der Müll mit der Kutsche abgeholt wird.
-                </p>
-              </div>
-            </div>
-            <div class="swiper-slide item-slider">
-              <div class="item-slider-img">
-                <picture>
-                  <source type="image/avif" srcset="./img/tui-spiekeroog.avif 1x,./img/tui-spiekeroog@2x.avif 2x">
-                  <source type="image/webp" srcset="./img/tui-spiekeroog.webp 1x,./img/tui-spiekeroog@2x.webp 2x">
-                  <img src="./img/tui-spiekeroog.jpg" alt="tui-spiekeroog" width="624" height="286" loading="lazy" decoding="async">
-                </picture>
-              </div>
-              <div class="item-slider-content">
-                <h6 class="content-title">Spiekeroog</h6>
-                <p class="content-text">
-                  Die Insel Spiekeroog kann sich nicht nur durch ihr UNESCO-Welterbe Wattenmeer behaupten, sie hat noch viel mehr zu bieten. Die Insel wurde von der International Dark Sky Association (IDA) offiziell als Sterneninsel anerkannt. Sie gehört zu den wenigen Gegenden in Deutschland, in denen noch ein eindrucksvoller und leuchtender Sternenhimmel bestaunt werden kann. Auf Spiekeroog hast Du die Möglichkeit, die Insel auf dem Rücken von Islandpferden aus einer neuen Perspektive zu entdecken.
-                </p>
-              </div>
-            </div>
-            <div class="swiper-slide item-slider">
-              <div class="item-slider-img">
-                <picture>
-                  <source type="image/avif" srcset="./img/tui-baltrum.avif 1x,./img/tui-baltrum@2x.avif 2x">
-                  <source type="image/webp" srcset="./img/tui-baltrum.webp 1x,./img/tui-baltrum@2x.webp 2x">
-                  <img src="./img/tui-baltrum.jpg" alt="tui-baltrum" width="624" height="286" loading="lazy" decoding="async">
-                </picture>
-              </div>
-              <div class="item-slider-content">
-                <h6 class="content-title">Baltrum</h6>
-                <p class="content-text">
-                  Eine weitere autofreie Insel und ein Geheimtipp für ruhesuchende Urlauber ist die ostfriesische Insel Baltrum. Sie zeichnet sich vor allem durch ihre reichhaltige Geschichte und unberührte Natur aus. Auf einem Spaziergang entlang des Sandstrandes kannst Du das Wattenmeer samt Seehunden bestaunen oder Dich auf die Suche nach Bernstein begeben.
-                </p>
-              </div>
-            </div>
-            <div class="swiper-slide item-slider">
-              <div class="item-slider-img">
-                <picture>
-                  <source type="image/avif" srcset="./img/tui-wangerooge.avif 1x,./img/tui-wangerooge@2x.avif 2x">
-                  <source type="image/webp" srcset="./img/tui-wangerooge.webp 1x,./img/tui-wangerooge@2x.webp 2x">
-                  <img src="./img/tui-wangerooge.jpg" alt="tui-wangerooge" width="624" height="286" loading="lazy" decoding="async">
-                </picture>
-              </div>
-              <div class="item-slider-content">
-                <h6 class="content-title">Wangerooge</h6>
-                <p class="content-text">
-                  Auch dieses autofreie Inselparadies hat unglaublich viel zu bieten. Natürlich kannst Du auch hier die langen Sandstrände entdecken, im Meer baden und Dich sonnen oder Thalasso-Therapien entdecken. Thalasso ist ein natürliches Heilverfahren zur Behandlung von Krankheiten und Beschwerden mit Meerwasser. Auf Wangerooge gibt es eine Vielzahl von Therapieangeboten, die verschiedene Thalasso-Elemente nutzen. Der Westturm ist auf dem Inselwappen zu sehen und bis heute eines der wichtigsten Wahrzeichen der Insel, wo sich heutzutage eine Jugendherberge befindet. Von dort kannst Du einen tollen Ausblick über die Insel erhalten und die Nordseeluft einatmen.
-                </p>
-              </div>
-            </div>
-            <div class="swiper-slide item-slider">
-              <div class="item-slider-img">
-                <picture>
-                  <source type="image/avif" srcset="./img/tui-lolland.avif 1x,./img/tui-lolland@2x.avif 2x">
-                  <source type="image/webp" srcset="./img/tui-lolland.webp 1x,./img/tui-lolland@2x.webp 2x">
-                  <img src="./img/tui-lolland.jpg" alt="tui-lolland" width="624" height="286" loading="lazy" decoding="async">
-                </picture>
-              </div>
-              <div class="item-slider-content">
-                <h6 class="content-title">Lolland</h6>
-                <p class="content-text">
-                  Auf der dänischen Insel gehören Ruhe und Gelassenheit zum Alltag und trotzdem kannst Du hier viel erleben und unternehmen. Eine Exkursion zum Knuthenborg Safaripark ist besonders bei Familien beliebt, denn hier kannst Du freilaufende Tiere aus aller Welt, wie Zebras, bestaunen. Die Insel hat auch eine süße Überraschung parat: die Lolland Schokoladenfabrik, ein Muss für Naschkatzen und alle, die handgefertigte Köstlichkeiten schätzen. Genießer und Feinschmecker können auf der Insel Dänemarks größtes Weingut besuchen und den preisgekrönten Kirschwein verkosten. Außerdem gibt es unendlich viele Outdoor-Aktivitäten, wie Wandern, Paddleboarding und Kanu fahren oder Kulturangebote wie die Dodekalitten, ein Kreis aus gigantischen Skulpturen.
                 </p>
               </div>
             </div>
